--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 </style>
 <body>
-<h1 style="color:red">Donut World</h1>>
+    <center> 
+   <h1 style="color:red">Donut World</h1>>
    <img src="/uploads/2023/02/donut.png">
+   </center>
 </body>
 </html>
